# Projet04

./: .coverage  README.md  pyproject.toml  requirements.txt  reseaux.json
Exemples/: demo.py
Test/: test_affichage.py  test_appstreamlit.py  test_data.py  test_function.py  test_menuterminal.py
src/: TestInterfacegraphique.py  __init__.py  affichage.py  app.py  appstreamlit.py  data.py  demo.py  main.py
tests/: test_affichage.py  test_appstreamlit.py  test_data.py  test_function.py
