[project]
name = "projet04"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "coverage>=7.8.0",
    "matplotlib>=3.10.1",
    "mypy>=1.15.0",
    "networkx>=3.4.2",
    "numpy>=2.2.5",
    "pyinstrument>=5.0.1",
    "pytest>=8.3.5",
    "pytest-cov>=6.1.1",
    "ruff>=0.11.11",
    "scipy>=1.15.2",
    "streamlit>=1.45.1",
]

[dependency-groups]
dev = [
    "pytest-cov>=6.1.1",
]
