[project]
name = "projet04"
version = "0.1.0"
description = "Modélisation réseau avec Streamlit"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "streamlit>=1.45.1",
    "matplotlib>=3.10.1",
    "networkx>=3.4.2",
    "numpy>=2.2.5",
    "scipy>=1.15.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.5",
    "pytest-cov>=6.1.1",
    "mypy>=1.15.0",
    "ruff>=0.11.11",
    "coverage>=7.8.0",
    "pyinstrument>=5.0.1",
]
